dropdown_widget: Fix unnecessary scrollbar in the dropdown widget.
Fixes unnecessary scrollbar appearing in the dropdown widget due to
"position: absolute" of the edit and delete buttons.

Fixes #35600.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -2186,6 +2186,7 @@ body:not(.spectator-view) {
            user-set line-height, so that the icon is always
            vertically centered properly. */
         line-height: 1.214;
+        overflow: hidden;
 
         .channel-privacy-type-icon {
             line-height: 1.214;
